--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVDN0ggfRDOLtho1gLVOPc",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNK0wFkHGKSz8u+XY1HI5yZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,16 +32,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9xKiLXprvut9",
-        "outputId": "92367bfa-d723-4589-c336-b51a63022d16"
+        "outputId": "725e4cd1-34fb-4e06-ac05-6c866215d0ee"
       },
       "source": [
         "# Program to multiply two matrices using nested loops\r\n",
         "\r\n",
         "\r\n",
         "# 3x2 matrix\r\n",
-        "X = [ [1,11],[5,7],[7,3] ]\r\n",
+        "X = [ [1,1],[1,1],[1,1] ]\r\n",
         "# 2x3 matrix\r\n",
-        "Y = [ [1,7,3],[2,19,7] ]\r\n",
+        "Y = [ [1,3,5],[6,8,12] ]\r\n",
         "\r\n",
         "# resultant matrix\r\n",
         "result = [ [0,0,0],[0,0,0],[0,0,0] ]\r\n",
@@ -58,14 +59,51 @@
         "for r in result:\r\n",
         "   print(r)\r\n"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[23, 216, 80]\n",
-            "[19, 168, 64]\n",
-            "[13, 106, 42]\n"
+            "[7, 11, 17]\n",
+            "[7, 11, 17]\n",
+            "[7, 11, 17]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ld-Xtbht24iH",
+        "outputId": "c30f4df8-d656-4363-9159-d9d51af18820"
+      },
+      "source": [
+        "# Program to multiply two matrices using list comprehension\r\n",
+        "\r\n",
+        "# 3x2 matrix\r\n",
+        "X = [ [1,2],[3,4],[4,5] ]\r\n",
+        "# 2x3 matrix\r\n",
+        "Y = [ [1,2,3],[4,5,6] ]\r\n",
+        "\r\n",
+        "# resultant matrix\r\n",
+        "resultant = [[sum(a*b for a,b in zip(X_row,Y_col)) for Y_col in zip(*Y)] for X_row in X]\r\n",
+        "\r\n",
+        "# printing matrix.\r\n",
+        "for x in resultant:\r\n",
+        "   print(x)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[9, 12, 15]\n",
+            "[19, 26, 33]\n",
+            "[24, 33, 42]\n"
           ],
           "name": "stdout"
         }
