--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNK0wFkHGKSz8u+XY1HI5yZ",
+      "authorship_tag": "ABX9TyMbFOTGDDZ7qB3IdC4dLarA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "for r in result:\r\n",
         "   print(r)\r\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,6 +71,51 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0P0kpnaD7PZ8",
+        "outputId": "bf8ef782-3b40-4104-d96e-aab8306bc30e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Prime number generator\r\n",
+        "def prime_generator(end):\r\n",
+        "    for n in range(2, end):     # n starts from 2 to end\r\n",
+        "        for x in range(2, n):   # check if x can be divided by n\r\n",
+        "            if n % x == 0:      # if true then n is not prime\r\n",
+        "                break\r\n",
+        "        else:                   # if x is found after exhausting all values of x\r\n",
+        "            yield n             # generate the prime\r\n",
+        "\r\n",
+        "\r\n",
+        "g = prime_generator(1000)       # give firt 1000 prime numbers\r\n",
+        "print(list(g)) "
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9gG3cDuz7ZRw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -96,7 +141,7 @@
         "for x in resultant:\r\n",
         "   print(x)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
