Colaboratory kullanılarak oluşturuldu

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMbFOTGDDZ7qB3IdC4dLarA",
+      "authorship_tag": "ABX9TyP/Ek5ENzoIHIeIXWqrc5n1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "for r in result:\r\n",
         "   print(r)\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,51 +71,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0P0kpnaD7PZ8",
-        "outputId": "bf8ef782-3b40-4104-d96e-aab8306bc30e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# Prime number generator\r\n",
-        "def prime_generator(end):\r\n",
-        "    for n in range(2, end):     # n starts from 2 to end\r\n",
-        "        for x in range(2, n):   # check if x can be divided by n\r\n",
-        "            if n % x == 0:      # if true then n is not prime\r\n",
-        "                break\r\n",
-        "        else:                   # if x is found after exhausting all values of x\r\n",
-        "            yield n             # generate the prime\r\n",
-        "\r\n",
-        "\r\n",
-        "g = prime_generator(1000)       # give firt 1000 prime numbers\r\n",
-        "print(list(g)) "
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9gG3cDuz7ZRw"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -141,7 +96,7 @@
         "for x in resultant:\r\n",
         "   print(x)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,6 +104,278 @@
             "[9, 12, 15]\n",
             "[19, 26, 33]\n",
             "[24, 33, 42]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vRAe_QDU66b8",
+        "outputId": "a79088b0-002c-4152-ef22-8e5ccc4511b5"
+      },
+      "source": [
+        "# Prime number generator\r\n",
+        "def prime_generator(end):\r\n",
+        "    for n in range(2, end):     # n starts from 2 to end\r\n",
+        "        for x in range(2, n):   # check if x can be divided by n\r\n",
+        "            if n % x == 0:      # if true then n is not prime\r\n",
+        "                break\r\n",
+        "        else:                   # if x is found after exhausting all values of x\r\n",
+        "            yield n             # generate the prime\r\n",
+        "\r\n",
+        "\r\n",
+        "g = prime_generator(1000)       # give firt 1000 prime numbers\r\n",
+        "print(list(g)) "
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x_1OjS-H7pwg",
+        "outputId": "4e7eb8b1-5b55-4ac9-a827-e41321e8a10a"
+      },
+      "source": [
+        "def is_Power_of_two(n):\r\n",
+        "        return n > 0 and (n & (n - 1)) == 0\r\n",
+        "print(is_Power_of_two(4))\r\n",
+        "print(is_Power_of_two(36))\r\n",
+        "print(is_Power_of_two(16))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "awF9p7DB8iRk",
+        "outputId": "2713d7d1-a6a3-4160-83ff-10c6cb33139b"
+      },
+      "source": [
+        "print(\"Twinkle, twinkle, little star, \\n\\tHow I wonder what you are! \\n\\t\\tUp above the world so high, \\n\\t\\tLike a diamond in the sky. \\nTwinkle, twinkle, little star, \\n\\tHow I wonder what you are!\")\r\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Twinkle, twinkle, little star, \n",
+            "\tHow I wonder what you are! \n",
+            "\t\tUp above the world so high, \n",
+            "\t\tLike a diamond in the sky. \n",
+            "Twinkle, twinkle, little star, \n",
+            "\tHow I wonder what you are!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eahLSzt_8kzd",
+        "outputId": "6e380e9a-636b-4ccc-c51c-ec70108ced42"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "print(np.__version__)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.19.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WJH4gUPw951g",
+        "outputId": "8134bf5a-3069-47d9-9e42-e82a666bef95"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "x = np.ones((3,3))\r\n",
+        "print(\"Checkerboard pattern:\")\r\n",
+        "x = np.zeros((3,3),dtype=int)\r\n",
+        "x[1::2,::2] = 1\r\n",
+        "x[::2,1::2] = 1\r\n",
+        "print(x)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Checkerboard pattern:\n",
+            "[[0 1 0]\n",
+            " [1 0 1]\n",
+            " [0 1 0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MybhdgQY97c6",
+        "outputId": "b9a6a51b-0922-404f-e0fd-e67fb63f0eeb"
+      },
+      "source": [
+        "import numpy as np #NumPy: 3x3 matris oluşturun\r\n",
+        "x = np.ones((3,3))\r\n",
+        "print(\"Checkerboard pattern:\")\r\n",
+        "x = np.zeros((3,3),dtype=int)\r\n",
+        "x[1::3,::2] = 1\r\n",
+        "x[::2,1::3] = 1\r\n",
+        "print(x)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Checkerboard pattern:\n",
+            "[[0 1 0]\n",
+            " [1 0 1]\n",
+            " [0 1 0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V3TkryIN-fb-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qGBFabxn-umB"
+      },
+      "source": [
+        "import numpy as np #2 ile 10 arasında değişen değerlere sahip bir 3x3 matris oluşturmak için bir NumPy programı yazın\r\n",
+        "x =  np.arange(2, 11).reshape(3,3)\r\n",
+        "print(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "StnWr_IA_Z_v",
+        "outputId": "91ec2041-bc4a-4771-f63a-5890d3cbc6a0"
+      },
+      "source": [
+        "n=5; #döngü oluşturma\r\n",
+        "for i in range(n):\r\n",
+        "    for j in range(i):\r\n",
+        "        print ('* ', end=\"\")\r\n",
+        "    print('')\r\n",
+        "\r\n",
+        "for i in range(n,0,-1):\r\n",
+        "    for j in range(i):\r\n",
+        "        print('* ', end=\"\")\r\n",
+        "    print('')"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n",
+            "* * * * \n",
+            "* * * \n",
+            "* * \n",
+            "* \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HDz27RwT-MZX",
+        "outputId": "da0f4d4f-63ad-40c3-918a-c15004138a73"
+      },
+      "source": [
+        "import numpy as np #NumPy: Sayısal değer listesini tek boyutlu NumPy dizisine dönüştürme\r\n",
+        "l = [12.23, 13.32, 100, 36.32]\r\n",
+        "print(\"Original List:\",l)\r\n",
+        "a = np.array(l)\r\n",
+        "print(\"One-dimensional NumPy array: \",a)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Original List: [12.23, 13.32, 100, 36.32]\n",
+            "One-dimensional NumPy array:  [ 12.23  13.32 100.    36.32]\n"
           ],
           "name": "stdout"
         }
