Colaboratory kullanılarak oluşturuldu

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP/Ek5ENzoIHIeIXWqrc5n1",
+      "authorship_tag": "ABX9TyMLUz7EHPc92+TQn/kMme96",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,6 +380,247 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UuBbwzvCSd5z",
+        "outputId": "7f49ee67-d29c-4b1b-dacf-5ddb30e9bcd7"
+      },
+      "source": [
+        "list1= list((1,2,3,4,5))\r\n",
+        "list2=list1\r\n",
+        "list3=list1.copy()\r\n",
+        "\r\n",
+        "list1[-1] = 6\r\n",
+        "\r\n",
+        "print(f'List 1: {list1}, List 2: {list2}, List 3: {list3}')\r\n",
+        "\r\n"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "List 1: [1, 2, 3, 4, 6], List 2: [1, 2, 3, 4, 6], List 3: [1, 2, 3, 4, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XpVxT4PWZ7ne",
+        "outputId": "3b6af580-712e-4749-f058-746140a5e7ae"
+      },
+      "source": [
+        "randomDict= {1:'1', 2:['1','2'], 3:['1','2','3']}\r\n",
+        "for key, value in randomDict.items():\r\n",
+        "  for v in value:\r\n",
+        "     print(v,end='')"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "112123"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HqWi2oXvbsE0",
+        "outputId": "fb02fe05-4d2f-4900-a193-d76bdb6a8221"
+      },
+      "source": [
+        "customTuple= (10,20,50,30,40)\r\n",
+        "customTuple= customTuple[::-1]\r\n",
+        "for i in customTuple:\r\n",
+        "  print(i,end='')"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4030502010"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x7plXv3pci5O"
+      },
+      "source": [
+        "def change(customlist):\r\n",
+        "  customlist[0]=0\r\n",
+        "  customlist.append(1)\r\n",
+        "  return customlist\r\n",
+        "  randomlist=[1,2,3,4,5,6]\r\n",
+        "  print(change(randomlist))\r\n",
+        "\r\n"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3a4e0Ur5dfKk"
+      },
+      "source": [
+        "def change(customlist):\r\n",
+        "  customlist[0] = 0\r\n",
+        "  customlist.append(1)\r\n",
+        "  return customlist\r\n",
+        "  randomlist=[1,2,3,4,5,6]\r\n",
+        "\r\n",
+        "  print(change(randomlist))\r\n"
+      ],
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4FWJpGfteWPF",
+        "outputId": "d041a918-7630-4144-8130-651062e12635"
+      },
+      "source": [
+        "D= {1:1,2:'2','1':2,'2':3}\r\n",
+        "D['1']=2\r\n",
+        "print(D[D[D[str(D[1])]]])"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hs5CnlqrfoT7",
+        "outputId": "43460b1f-97fc-41c6-c242-5b1358a6e17a"
+      },
+      "source": [
+        "sayılar = \"123456789\"\r\n",
+        "\r\n",
+        "for sayı in sayılar:\r\n",
+        "    print(int(sayı) * 2)\r\n"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WVYLGCdGimRq",
+        "outputId": "ff06f51e-ed96-4d3c-892d-b21c2aaef3b1"
+      },
+      "source": [
+        "a = \"istihza.com\"\r\n",
+        "\"h\" in a"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bbIu-EHqjRpg"
+      },
+      "source": [
+        "tr_harfler = \"şçöğüİı\"\r\n",
+        "\r\n",
+        "parola = input(\"Parolanız: \")\r\n",
+        "\r\n",
+        "for karakter in parola:\r\n",
+        "    if karakter in tr_harfler:\r\n",
+        "        print(\"parolada Türkçe karakter kullanılamaz\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DSU4yqr7ji5B"
+      },
+      "source": [
+        "count = 1\r\n",
+        "\r\n",
+        "# Code block 1\r\n",
+        "while count < 11:\r\n",
+        "    print(count)\r\n",
+        "    count = count + 1\r\n",
+        "\r\n",
+        "# Code block 2\r\n",
+        "if count == 11:\r\n",
+        "    print(\"Counting complete!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
