Colaboratory kullanılarak oluşturuldu

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMLUz7EHPc92+TQn/kMme96",
+      "authorship_tag": "ABX9TyN80QT2AaV3QX/DYx1uZ5ZM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -618,6 +618,23 @@
         "# Code block 2\r\n",
         "if count == 11:\r\n",
         "    print(\"Counting complete!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KwfwpJVKnZmH"
+      },
+      "source": [
+        "stop_number = int(input(\"Please enter a stop number: \"))\r\n",
+        "\r\n",
+        "result = 0\r\n",
+        "for i in range(0, stop_number):\r\n",
+        "    result = result + i\r\n",
+        "    print(result)\r\n",
+        "print(result)"
       ],
       "execution_count": null,
       "outputs": []
